TWINS-379: refactor TwinClassField create/update